[gd_scene load_steps=3 format=3 uid="uid://cm5kk4gg36icl"]

[ext_resource type="Theme" uid="uid://bgwet62xxfxeb" path="res://assets/ui/themes/main_menu.tres" id="1_t7mmw"]
[ext_resource type="Script" uid="uid://c0jntgkcpy27b" path="res://scripts/ui/dialog.gd" id="1_xqt65"]

[node name="Dialog" type="Node2D"]
script = ExtResource("1_xqt65")

[node name="Dialog" type="Window" parent="."]
oversampling_override = 1.0
title = "PA system:"
position = Vector2i(740, 534)
size = Vector2i(400, 100)
visible = false
popup_window = true
min_size = Vector2i(195, 100)
max_size = Vector2i(400, 100)
theme = ExtResource("1_t7mmw")

[node name="ColorRect" type="ColorRect" parent="Dialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.83889705, 0.83889705, 0.838897, 1)

[node name="MarginContainer" type="MarginContainer" parent="Dialog/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="dialog_label" type="Label" parent="Dialog/ColorRect/MarginContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "This test has been the most SATISFACTORY yet!"
autowrap_mode = 2

[node name="dialog_timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="dialog_timer" to="." method="_on_dialog_timer_timeout"]
